--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   rxdart: ^0.22.0
   charts_flutter: ^0.6.0
   http: ^0.12.0+1
+  flutter_screenutil: ^0.5.2
 
 dev_dependencies:
   flutter_test:
