--- a/pacific_dashboards/android/build.gradle
+++ b/pacific_dashboards/android/build.gradle
@@ -3,11 +3,13 @@ buildscript {
     repositories {
         google()
         jcenter()
+         maven { url 'https://maven.fabric.io/public' }
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'io.fabric.tools:gradle:1.+'
     }
 }
 
