--- a/pacific_dashboards/android/app/src/main/AndroidManifest.xml
+++ b/pacific_dashboards/android/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
             <meta-data
                 android:name="io.flutter.app.android.SplashScreenUntilFirstFrame"
                 android:value="true" />
+            <meta-data
+                android:name="firebase_analytics_collection_enabled"
+                android:value="true"/>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
