--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -19,8 +19,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
+  firebase_core: ^0.2.5
+  firebase_crashlytics:  ^0.0.4+8
+    # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   rxdart: ^0.22.0
