--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   rxdart: ^0.22.0
   charts_flutter: ^0.6.0
   http: ^0.12.0+1
+  path_provider: ^1.1.0
+  shared_preferences: ^0.5.3
 
 dev_dependencies:
   flutter_test:
