#STORY POED-19, POED 30 Basic navigation, side menu, splash screen

--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -48,10 +48,17 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
+  assets:
+    - images/logos/mainlogo.png
+    - images/logos/marshalllogo.png
+    - images/icons/Budgets.png
+    - images/icons/Exams.png
+    - images/icons/Indicators.png
+    - images/icons/School Accreditations.png
+    - images/icons/Schools.png
+    - images/icons/Teachers.png
   #  - images/a_dot_ham.jpeg
-
+# assets\images\logo\mainlogo.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
@@ -63,6 +70,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+    # fonts:
+    # - family: NotoSans
+    #   fonts:
+    #     - asset: fonts/NotoSans-Regular.ttf
+    #     - asset: fonts/NotoSans-Bold.ttf
+    #       style: bold
+    #     - asset: fonts/NotoSans-BoldItalic.ttf
+    #       style: bolditalic
+    #     - asset: fonts/NotoSans-Italic.ttf
+    #       style: italic
+  #
   # fonts:
   #   - family: Schyler
   #     fonts:
