#STORY POED-38 refactored code

--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -58,7 +58,7 @@ flutter:
     - images/icons/Schools.svg
     - images/icons/Teachers.svg
   #  - images/a_dot_ham.jpeg
-    - images/icons/tune_24px_outlined.svg
+    - images/icons/Tune.svg
   # assets\images\logo\mainlogo.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
