--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   flutter_crashlytics: ^1.0.0
   path_provider: ^1.1.0
   shared_preferences: ^0.5.3
-  flutter_svg: ^0.12.4
+  flutter_svg: ^0.13.0+2
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -49,14 +49,15 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/logos/mainlogo.png
-    - images/logos/marshalllogo.png
+    - images/logos/Federated States of Micronesia.png
+    - images/logos/Marshall Islands.png
     - images/icons/Budgets.svg
     - images/icons/Exams.svg
     - images/icons/Indicators.svg
     - images/icons/School Accreditations.svg
     - images/icons/Schools.svg
     - images/icons/Teachers.svg
+    
   #  - images/a_dot_ham.jpeg
     - images/icons/Tune.svg
   # assets\images\logo\mainlogo.png
