--- a/pacific_dashboards/android/app/build.gradle
+++ b/pacific_dashboards/android/app/build.gradle
@@ -37,7 +37,6 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "fm.doe.national.pacific_dashboards"
         minSdkVersion 16
         targetSdkVersion 28
@@ -46,11 +45,12 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
-    buildTypes {
+    signingConfigs {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            storePassword "79u6CpiUSWVv"
+            storeFile file("PacificDashboards.keystore")
+            keyAlias "MACKEYALIAS"
+            keyPassword "aL7hELtUmY43"
         }
     }
 }
