androidX migration + fixed build config

--- a/pacific_dashboards/android/app/build.gradle
+++ b/pacific_dashboards/android/app/build.gradle
@@ -42,15 +42,21 @@ android {
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     signingConfigs {
         release {
             storePassword "79u6CpiUSWVv"
-            storeFile file("../PacificDashboards.keystore")
+            storeFile file("../app/PacificDashboards.keystore")
             keyAlias "MACKEYALIAS"
             keyPassword "aL7hELtUmY43"
+        }
+    }
+
+    buildTypes {
+        release {
+            signingConfig signingConfigs.release
         }
     }
 }
@@ -62,6 +68,6 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
