--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -56,10 +56,12 @@ flutter:
     - images/icons/School Accreditations.svg
     - images/icons/Schools.svg
     - images/icons/Teachers.svg
+    - fonts/NotoSans-Regular.ttf
 
   #  - images/a_dot_ham.jpeg
     - images/icons/Tune.svg
 
+    
 flutter_icons:
   ios: true
   android: true
@@ -78,22 +80,10 @@ flutter_icons:
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-    # - family: NotoSans
-    #   fonts:
-    #     - asset: fonts/NotoSans-Regular.ttf
-    #     - asset: fonts/NotoSans-Bold.ttf
-    #       style: bold
-    #     - asset: fonts/NotoSans-BoldItalic.ttf
-    #       style: bolditalic
-    #     - asset: fonts/NotoSans-Italic.ttf
-    #       style: italic
-    # - family: Schyler
-    #   fonts:
-    #     - asset: fonts/Schyler-Regular.ttf
-    #     - asset: fonts/Schyler-Italic.ttf
-    #       style: italic
+  fonts:
+   - family: NotoSans
+     fonts:
+       - asset: assets/fonts/NotoSans-Regular.ttf
     # - family: Trajan Pro
     #   fonts:
     #     - asset: fonts/TrajanPro.ttf
