POED-60 Added data

--- a/pacific_dashboards/ios/Runner/Info.plist
+++ b/pacific_dashboards/ios/Runner/Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>Pacific Open Education</string>
+	<string>Pacific Open Education Data</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
