--- a/pacific_dashboards/android/app/src/main/AndroidManifest.xml
+++ b/pacific_dashboards/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="Pacific Open Education"
+        android:label="Pacific Open Education Data"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
