--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -11,19 +11,19 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl_translation: ^0.17.6
+  intl_translation: ^0.17.7
   flutter_cupertino_localizations: ^1.0.1
   cupertino_icons: ^0.1.2
-  rxdart: ^0.22.1
-  charts_flutter: ^0.6.0
+  rxdart: ^0.22.4
+  charts_flutter: ^0.8.1
   http: ^0.12.0+2
-  path_provider: ^1.2.0
-  shared_preferences: ^0.5.3+4
-  flutter_svg: ^0.13.1
+  path_provider: ^1.4.0
+  shared_preferences: ^0.5.4
+  flutter_svg: ^0.14.3
   appcenter: ^0.2.1
   appcenter_analytics: ^0.2.1
   appcenter_crashes: ^0.2.1
-  flutter_launcher_icons: ^0.7.0
+  flutter_launcher_icons: ^0.7.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
