--- a/pacific_dashboards/android/build.gradle
+++ b/pacific_dashboards/android/build.gradle
@@ -11,6 +11,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:3.2.1'
+        classpath 'io.fabric.tools:gradle:1.+'
     }
 }
 
