--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -1,7 +1,7 @@
 name: pacific_dashboards
 description: Pacific Dashboards app
 
-version: 1.0.1+3
+version: 1.0.1+4
 
 environment:
   sdk: ">=2.2.2 <3.0.0"
@@ -20,8 +20,8 @@ dependencies:
   path_provider: ^1.4.0
   shared_preferences: ^0.5.4
   flutter_svg: ^0.14.3
-  # flutter_crashlytics: ^1.0.0
   firebase_crashlytics: ^0.1.0+3
+  firebase_core: ^0.4.0+9
   flutter_launcher_icons: ^0.7.3
 dev_dependencies:
   flutter_test:
