--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -17,13 +17,13 @@ dependencies:
   charts_flutter: ^0.8.1
   dio: ^3.0.3
   path_provider: ^1.4.0
-  shared_preferences: ^0.5.4
+  shared_preferences: 0.5.3
   flutter_svg: ^0.14.3
   firebase_crashlytics: ^0.1.0+3
   firebase_core: ^0.4.0+9
   flutter_launcher_icons: ^0.7.3
-  bloc: ^1.0.0
-  flutter_bloc: ^1.0.0
+  bloc: ^2.0.0
+  flutter_bloc: ^2.0.0
   equatable: ^0.6.1
 dev_dependencies:
   flutter_test:
