--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -1,10 +1,10 @@
 name: pacific_dashboards
 description: Pacific Dashboards app
 
-version: 1.0.4+6
+version: 1.0.5+7
 
 environment:
-  sdk: ">=2.2.2 <3.0.0"
+  sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -13,22 +13,22 @@ dependencies:
     sdk: flutter
   flutter_cupertino_localizations: ^1.0.1
   cupertino_icons: ^0.1.2
-  rxdart: ^0.22.4
+  rxdart: ^0.23.1
   charts_flutter: ^0.8.1
-  dio: ^3.0.3
-  path_provider: ^1.4.0
-  shared_preferences: 0.5.3
-  flutter_svg: ^0.14.4
-  firebase_crashlytics: ^0.1.1+2
-  firebase_core: ^0.4.1+5
-  flutter_launcher_icons: ^0.7.3
-  bloc: ^2.0.0
-  flutter_bloc: ^2.1.1
-  equatable: ^1.0.0
+  dio: ^3.0.8
+  path_provider: ^1.5.1
+  shared_preferences: 0.5.6+1
+  flutter_svg: ^0.17.0
+  firebase_crashlytics: ^0.1.2+4
+  firebase_core: ^0.4.3+2
+  flutter_launcher_icons: ^0.7.4
+  bloc: ^3.0.0
+  flutter_bloc: ^3.1.0
+  equatable: ^1.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  intl_translation: ^0.17.7
+  intl_translation: ^0.17.9
 
 flutter:
   uses-material-design: true
@@ -36,6 +36,7 @@ flutter:
   assets:
     - images/fedemis.png
     - images/miemis.png
+    - images/kiribati.png
     - images/splash.png
     - images/budgets.svg
     - images/exams.svg
