--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -25,14 +25,22 @@ dependencies:
   bloc: ^3.0.0
   flutter_bloc: ^3.1.0
   equatable: ^1.0.2
+  firebase_remote_config: ^0.3.0+1
+  built_value: ^7.0.8
+  built_collection: ^4.3.2
+  hive: ^1.3.0
+  hive_flutter: ^0.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
   intl_translation: ^0.17.9
+  build_runner: ^1.7.3
+  built_value_generator: ^7.0.8
+  hive_generator: ^0.7.0
 
 flutter:
   uses-material-design: true
-  
+
   assets:
     - images/fedemis.png
     - images/miemis.png
