--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -16,7 +16,6 @@ dependencies:
   rxdart: ^0.23.1
   charts_flutter: ^0.8.1
   dio: ^3.0.8
-  path_provider: ^1.5.1
   flutter_svg: ^0.17.0
   firebase_crashlytics: ^0.1.2+4
   firebase_core: ^0.4.3+2
@@ -29,6 +28,7 @@ dependencies:
   built_collection: ^4.3.2
   hive: ^1.3.0
   hive_flutter: ^0.3.0
+  connectivity: ^0.4.6+2
 dev_dependencies:
   flutter_test:
     sdk: flutter
