--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -52,6 +52,7 @@ flutter:
     - images/schools.svg
     - images/teachers.svg
     - images/tune.svg
+    - images/filter.svg
 
   fonts:
     - family: NotoSans
@@ -64,6 +65,10 @@ flutter:
         - asset: fonts/NotoSans-BoldItalic.ttf
           style: italic
           weight: 700
+    - family: Roboto
+      fonts:
+        - asset: fonts/Roboto-Medium.ttf
+          weight: 500
 
 flutter_icons:
   ios: true
