--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -24,18 +24,23 @@ dependencies:
   flutter_bloc: ^3.1.0
   equatable: ^1.0.2
   firebase_remote_config: ^0.3.0+1
-  built_value: ^7.0.8
-  built_collection: ^4.3.2
-  hive: ^1.3.0
-  hive_flutter: ^0.3.0
   connectivity: ^0.4.6+2
+  moor: ^3.1.0
+  moor_ffi: ^0.6.0
+  path: ^1.7.0
+  path_provider: ^1.6.9
+  json_annotation: ^3.0.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   intl_translation: ^0.17.9
-  build_runner: ^1.7.3
-  built_value_generator: ^7.0.8
-  hive_generator: ^0.7.0
+  build_runner: ^1.10.0
+  moor_generator: ^3.1.0
+  json_serializable: ^3.3.0
+
+dependency_overrides:
+  path: ^1.7.0
 
 flutter:
   uses-material-design: true
