--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -25,12 +25,9 @@ dependencies:
   equatable: ^1.0.2
   firebase_remote_config: ^0.3.0+1
   connectivity: ^0.4.6+2
-  moor: ^3.1.0
-  moor_ffi: ^0.6.0
-  path: ^1.7.0
-  path_provider: ^1.6.9
   json_annotation: ^3.0.1
-  worker_manager: ^2.6.8
+  hive: ^1.4.1+1
+  hive_flutter: ^0.3.0+2
 
 dev_dependencies:
   flutter_test:
@@ -39,9 +36,12 @@ dev_dependencies:
   build_runner: ^1.10.0
   moor_generator: ^3.1.0
   json_serializable: ^3.3.0
+  hive_generator: ^0.7.0+2
+
 
 dependency_overrides:
-  path: ^1.7.0
+  dartx: ^0.3.0
+  quiver: 2.1.3
 
 flutter:
   uses-material-design: true
