--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -1,7 +1,7 @@
 name: pacific_dashboards
 description: Pacific Dashboards app
 
-version: 1.0.5+14
+version: 1.1.0+15
 
 environment:
   sdk: ">=2.6.0 <3.0.0"
@@ -12,19 +12,19 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_cupertino_localizations: ^1.0.1
-  cupertino_icons: ^0.1.2
-  rxdart: ^0.23.1
-  charts_flutter: ^0.8.1
-  dio: ^3.0.8
+  cupertino_icons: ^0.1.3
+  rxdart: ^0.24.1
+  charts_flutter: ^0.9.0
+  dio: ^3.0.9
   flutter_svg: ^0.17.0
-  firebase_crashlytics: ^0.1.2+4
-  firebase_core: ^0.4.3+2
-  flutter_launcher_icons: ^0.7.4
-  bloc: ^3.0.0
-  flutter_bloc: ^3.1.0
-  equatable: ^1.0.2
-  firebase_remote_config: ^0.3.0+1
-  connectivity: ^0.4.6+2
+  firebase_crashlytics: ^0.1.3+3
+  firebase_core: ^0.4.5
+  flutter_launcher_icons: ^0.7.5
+  bloc: ^5.0.0
+  flutter_bloc: ^5.0.0
+  equatable: ^1.2.0
+  firebase_remote_config: ^0.3.1
+  connectivity: ^0.4.9
   json_annotation: ^3.0.1
   hive: ^1.4.1+1
   hive_flutter: ^0.3.0+2
@@ -34,7 +34,6 @@ dev_dependencies:
     sdk: flutter
   intl_translation: ^0.17.9
   build_runner: ^1.10.0
-  moor_generator: ^3.1.0
   json_serializable: ^3.3.0
   hive_generator: ^0.7.0+2
 
