Updated all dependencies, updated Flutter, started Individual schools list page

--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -58,6 +58,8 @@ flutter:
     - images/teachers.svg
     - images/tune.svg
     - images/filter.svg
+    - images/ic_search.svg
+    - images/ic_search_close.svg
 
   fonts:
     - family: NotoSans
