--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   json_annotation: ^3.0.1
   hive: ^1.4.1+1
   hive_flutter: ^0.3.0+2
+  get_it: ^4.0.2
 
 dev_dependencies:
   flutter_test:
