--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -20,8 +20,6 @@ dependencies:
   firebase_crashlytics: ^0.1.3+3
   firebase_core: ^0.4.5
   flutter_launcher_icons: ^0.7.5
-  bloc: ^5.0.0
-  flutter_bloc: ^5.0.0
   equatable: ^1.2.0
   firebase_remote_config: ^0.3.1
   connectivity: ^0.4.9
@@ -29,6 +27,10 @@ dependencies:
   hive: ^1.4.1+1
   hive_flutter: ^0.3.0+2
   get_it: ^4.0.2
+  arch:
+    git:
+      url: https://github.com/scrinoman/arch.git
+      ref: master
 
 dev_dependencies:
   flutter_test:
