--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   rxdart: ^0.24.1
   charts_flutter: ^0.9.0
   dio: ^3.0.9
+  dio_flutter_transformer: ^3.0.2
+  retrofit: ^1.3.4
   flutter_svg: ^0.17.0
   firebase_crashlytics: ^0.1.3+3
   firebase_core: ^0.4.5
@@ -39,6 +41,7 @@ dev_dependencies:
   build_runner: ^1.10.0
   json_serializable: ^3.3.0
   hive_generator: ^0.7.0+2
+  retrofit_generator: ^1.3.7+4
 
 
 dependency_overrides:
