--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -18,17 +18,17 @@ dependencies:
   dio: ^3.0.9
   dio_flutter_transformer: ^3.0.2
   retrofit: ^1.3.4
-  flutter_svg: ^0.17.0
+  flutter_svg: ^0.18.0
   firebase_crashlytics: ^0.1.3+3
   firebase_core: ^0.4.5
   flutter_launcher_icons: ^0.7.5
-  equatable: ^1.2.0
   firebase_remote_config: ^0.3.1
   connectivity: ^0.4.9
   json_annotation: ^3.0.1
   hive: ^1.4.1+1
   hive_flutter: ^0.3.0+2
   get_it: ^4.0.2
+  intl: ^0.16.1
   arch:
     git:
       url: https://github.com/scrinoman/arch.git
@@ -37,7 +37,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  intl_translation: ^0.17.9
   build_runner: ^1.10.0
   json_serializable: ^3.3.0
   hive_generator: ^0.7.0+2
@@ -45,7 +44,7 @@ dev_dependencies:
 
 
 dependency_overrides:
-  dartx: ^0.3.0
+  # dartx: ^0.3.0
   quiver: 2.1.3
 
 flutter:
