--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -15,19 +15,19 @@ dependencies:
   cupertino_icons: ^0.1.3
   rxdart: ^0.24.1
   charts_flutter: ^0.9.0
-  dio: ^3.0.9
+  dio: ^3.0.10
   dio_flutter_transformer: ^3.0.2
   retrofit: ^1.3.4
-  flutter_svg: ^0.18.0
-  firebase_crashlytics: ^0.1.3+3
-  firebase_core: ^0.4.5
-  flutter_launcher_icons: ^0.7.5
-  firebase_remote_config: ^0.3.1
-  connectivity: ^0.4.9+5
-  json_annotation: ^3.0.1
-  hive: ^1.4.1+1
-  hive_flutter: ^0.3.0+2
-  get_it: ^4.0.2
+  flutter_svg: ^0.19.1
+  firebase_crashlytics: ^0.2.1+1
+  firebase_core: ^0.5.0+1
+  flutter_launcher_icons: ^0.8.1
+  firebase_remote_config: ^0.4.0+2
+  connectivity: ^2.0.0
+  json_annotation: ^3.1.0
+  hive: ^1.4.4+1
+  hive_flutter: ^0.3.1
+  get_it: ^5.0.1
   intl: ^0.16.1
   arch:
     git:
@@ -37,14 +37,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^1.10.0
-  json_serializable: ^3.3.0
-  hive_generator: ^0.7.0+2
+  build_runner: ^1.10.3
+  json_serializable: ^3.5.0
+  hive_generator: ^0.8.1
   retrofit_generator: ^1.3.7+4
-
-
-dependency_overrides:
-  quiver: 2.1.3
 
 flutter:
   uses-material-design: true
