--- a/pacific_dashboards/ios/Runner/GoogleService-Info.plist
+++ b/pacific_dashboards/ios/Runner/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>154037620831-9va0omgpsj7s1ed8h0ercr6mlvkbv2tg.apps.googleusercontent.com</string>
+	<string>154037620831-am2iusd4bjue390n24v7mdna2jqluep8.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.154037620831-9va0omgpsj7s1ed8h0ercr6mlvkbv2tg</string>
+	<string>com.googleusercontent.apps.154037620831-am2iusd4bjue390n24v7mdna2jqluep8</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBf5fhdyxHPw1f5ytQQOYY4-Sk2TTZMyOM</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>fm.doe.national.pacificdashboards</string>
+	<string>org.pacific-emis.pacificdashboards</string>
 	<key>PROJECT_ID</key>
 	<string>pacific-open-education-data</string>
 	<key>STORAGE_BUCKET</key>
@@ -29,7 +29,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:154037620831:ios:44a895aed2e771999d8bea</string>
+	<string>1:154037620831:ios:e3b19ba01f6330429d8bea</string>
 	<key>DATABASE_URL</key>
 	<string>https://pacific-open-education-data.firebaseio.com</string>
 </dict>
