--- a/pacific_dashboards/.gitignore
+++ b/pacific_dashboards/.gitignore
@@ -62,6 +62,7 @@ pubspec.lock
 **/ios/Flutter/Generated.xcconfig
 **/ios/Flutter/app.flx
 **/ios/Flutter/app.zip
+**/ios/Flutter/.last_build_id
 **/ios/Flutter/flutter_export_environment.sh
 **/ios/Flutter/flutter_assets/
 **/ios/ServiceDefinitions.json
