--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -1,7 +1,7 @@
 name: pacific_dashboards
 description: Pacific Dashboards app
 
-version: 1.1.0+21
+version: 1.1.0+22
 
 environment:
   sdk: ">=2.6.0 <3.0.0"
@@ -19,10 +19,10 @@ dependencies:
   dio_flutter_transformer: ^3.0.2
   retrofit: ^1.3.4
   flutter_svg: ^0.19.1
-  firebase_crashlytics: ^0.2.1+1
-  firebase_core: ^0.5.0+1
+  firebase_crashlytics: ^0.2.2
+  firebase_core: ^0.5.1
+  firebase_remote_config: ^0.4.1
   flutter_launcher_icons: ^0.8.1
-  firebase_remote_config: ^0.4.0+2
   connectivity: ^2.0.0
   json_annotation: ^3.1.0
   hive: ^1.4.4+1
