--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   charts_flutter: ^0.9.0
   dio: ^3.0.10
   dio_flutter_transformer: ^3.0.2
+  pretty_dio_logger: ^1.1.1
   retrofit: ^1.3.4
   flutter_svg: ^0.19.1
   firebase_crashlytics: ^0.2.2
