--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -1,7 +1,8 @@
 name: pacific_dashboards
 description: Pacific Dashboards app
+publish_to: none
 
-version: 1.1.0+22
+version: 1.1.4+36
 
 environment:
   sdk: ">=2.10.0 <3.0.0"
@@ -14,7 +15,7 @@ dependencies:
   flutter_cupertino_localizations: ^1.0.1
   cupertino_icons: ^0.1.3
   rxdart: ^0.24.1
-  charts_flutter: ^0.9.0
+  charts_flutter: ^0.10.0
   dio: ^3.0.10
   dio_flutter_transformer: ^3.0.2
   pretty_dio_logger: ^1.1.1
@@ -29,11 +30,14 @@ dependencies:
   hive: ^1.4.4+1
   hive_flutter: ^0.3.1
   get_it: ^5.0.1
-  intl: ^0.16.1
+  intl: ^0.17.0
+  xml2json: ^4.1.0
   arch:
     git:
       url: https://github.com/scrinoman/arch.git
       ref: v0.0.8
+  screen: ^0.0.5
+  async: ^2.5.0-nullsafety.1
 
 dev_dependencies:
   flutter_test:
