--- a/pacific_dashboards/android/app/src/main/AndroidManifest.xml
+++ b/pacific_dashboards/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:label="Pacific Open Education Data"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
