--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -1,7 +1,8 @@
 name: pacific_dashboards
 description: Pacific Dashboards app
+publish_to: none
 
-version: 1.1.2+29
+version: 1.1.3+30
 
 environment:
   sdk: ">=2.10.0 <3.0.0"
@@ -34,6 +35,8 @@ dependencies:
     git:
       url: https://github.com/scrinoman/arch.git
       ref: v0.0.8
+  screen: ^0.0.5
+  async: ^2.5.0-nullsafety.1
 
 dev_dependencies:
   flutter_test:
