--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   flutter_cupertino_localizations: ^1.0.1
   cupertino_icons: ^0.1.3
   rxdart: ^0.24.1
-  charts_flutter: ^0.9.0
+  charts_flutter: ^0.10.0
   dio: ^3.0.10
   dio_flutter_transformer: ^3.0.2
   pretty_dio_logger: ^1.1.1
@@ -30,7 +30,8 @@ dependencies:
   hive: ^1.4.4+1
   hive_flutter: ^0.3.1
   get_it: ^5.0.1
-  intl: ^0.16.1
+  intl: ^0.17.0
+  xml2json: ^4.1.0
   arch:
     git:
       url: https://github.com/scrinoman/arch.git
