--- a/pacific_dashboards/android/app/src/main/AndroidManifest.xml
+++ b/pacific_dashboards/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <application
         android:label="Pacific Open Education Data"
         android:allowBackup="false"
+        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
