--- a/pacific_dashboards/pubspec.yaml
+++ b/pacific_dashboards/pubspec.yaml
@@ -2,7 +2,7 @@ name: pacific_dashboards
 description: Pacific Dashboards app
 publish_to: none
 
-version: 1.1.3+36
+version: 1.1.4+37
 
 environment:
   sdk: ">=2.10.0 <3.0.0"
@@ -21,7 +21,6 @@ dependencies:
   pretty_dio_logger: ^1.1.1
   retrofit: ^1.3.4
   flutter_svg: ^0.19.1
-  firebase_crashlytics: ^0.2.2
   firebase_core: ^0.5.1
   firebase_remote_config: ^0.4.1
   flutter_launcher_icons: ^0.8.1
@@ -30,7 +29,7 @@ dependencies:
   hive: ^1.4.4+1
   hive_flutter: ^0.3.1
   get_it: ^5.0.1
-  intl: ^0.17.0
+  intl: ^0.16.0
   xml2json: ^4.1.0
   arch:
     git:
@@ -38,6 +37,8 @@ dependencies:
       ref: v0.0.8
   screen: ^0.0.5
   async: ^2.5.0-nullsafety.1
+  get_version: ^0.2.2
+  url_launcher: ^5.0.12
 
 dev_dependencies:
   flutter_test:
